--- a/vite-vanilla/src/pages/popup/index.html
+++ b/vite-vanilla/src/pages/popup/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div>popup</div>
+    <script type="module" src="./main.ts"></script>
   </body>
 </html>
