--- a/test3/src/pages/option/index.html
+++ b/test3/src/pages/option/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Vite + Vue + TS</title>
   </head>
   <body>
     <div id="app"></div>
-    <div>popup</div>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
